[package]
name = "dungeon-generator"
version = "0.1.0"
edition = "2021"
authors = ["vxdcxw <defresne.thierry@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
rand = "0.8.5"
